[package]
name = "webview_gui"
version = "0.1.0"
authors = ["Winsky Wen <winskywenme@gmail.com>"]
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
  "webview_sys",
  "demo",
]
